/*
 * $Id: ChangeLog,v 1.2186 2004/01/30 17:04:58 maurifull Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-30 10:12 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
    + Added logic to reset HB_OO_CLSTP_PUBLISHED for the assignment twin property ('_' ) in HB_FUNC( __CLSADDMSG )
    + Added support for HB_OO_CLSTP_PUBLISHED scope in HB_FUNC( __CLSGETPROPERTIESANDVALUES )

    /*
       I recommend that we discourage the usage of PERSISTENT Flag, in favour of the PUBLISHED scope which provides
       same functionality but in a more elegant fashion.
    */

2004-01-30 13:55 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * source/rtl/gtalleg/ssf.h
  * source/rtl/gtalleg/gtalleg.c
    ! Don't try X Windows modes if Allegro was compiled only for FB use

2004-01-30 16:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rdd/dbf1.c
   * source/rdd/dbcmd.c
     ! fix to some memory leaks when:
       % opening a dbf with same alias
       % opening a dbf which does not exist
       % opening a dbf with memo but no DBT/FPT found
       % opening a corrupted dbf

2004-01-30 03:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.nt
  * makefile.vc
    * build source\rtl\gtalleg if HB_GTALLEG is defined.

2004-01-29 23:20 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * source/rtl/gtalleg/gtalleg.c
    * Try 16 bit modes first, then 8 bit under DOS & Linux FB
  * makefile.bc
    + Added conditional gtalleg compilation

2004-01-30 03:00 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/make_rpm.sh
  * xharbour/xharbour.spec
    * auto detect allegro-devel installed and build gtalleg
    + new switch '--with allegro' to force allegro building
      when allegro-devel not installed from RPM

  * xharbour/bin/hb-func.sh